--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
     "name": "rradutzu/zend2-doctrine-dynamic-db",
+    "description": "Zend2 Doctrine Module that allows defining connections using dynamic database names",
     "version": "0.0.1",
     "require": {
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+	"doctrine/doctrine-orm-module": ">0.5"
     },
     "autoload": {
         "psr-0": {
