--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "rradutzu/zend2-doctrine-dynamic-db",
     "description": "Zend2 Doctrine Module that allows defining connections using dynamic database names",
     "version": "0.0.3",
+    "license": "GPL-2.0",
     "require": {
         "composer/installers": "~1.0",
 	"doctrine/doctrine-orm-module": ">0.5"
