--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rradutzu/zend2-doctrine-dynamic-db",
-    "description": "Zend2 Doctrine Module that allows defining connections using dynamic database names",
-    "version": "0.0.4",
+    "description": "Zend2/3 Doctrine Module that allows defining connections using dynamic database names",
+    "version": "1.0.0",
     "license": "GPL-2.0",
     "require": {
         "composer/installers": "~1.0",
