--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,18 @@
     "version": "1.0.3",
     "license": "GPL-2.0",
     "require": {
+        "php": "^8.2",
         "composer/installers": "~1.0",
-	    "doctrine/doctrine-orm-module": ">0.5"
+	    "doctrine/doctrine-orm-module": "^6.0"
     },
     "autoload": {
         "psr-0": {
             "DoctrineDynamicDb\\": "src/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
         }
     }
 }
